# python_project_packaging

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml  tox.ini
.github/workflows/: pytest_coverage.yml
.tox/py27env/: .tox-info.json
src/fastapiproject/: app.py
tests/: test_app.py
